feat: add name and email

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/AliakseiSavelyey/goit-js-hw-09.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Aliaksei Savelyey <mtptz21@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AliakseiSavelyey/goit-js-hw-09/issues"
